changes of links to projects

--- a/index.html
+++ b/index.html
@@ -167,30 +167,30 @@
                 </a>
             </div>
             <div class="projects__item">
-                <a class="item__link" href="https://shotx.pl">
-                    <h1 class="item__title">Website of Photo Agency</h1>
-                    <p>Website made with React and form in node + express</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/shotx.png" alt="OBRAZEK">
+                <a class="item__link" href="https://search-for-moviesss.netlify.app">
+                    <h1 class="item__title">Moviesy app</h1>
+                    <p>Website made with React and form in node + express. You can choose your favourite movie and create a list of your favourite movies... If u go to my github, you also run the form (its write at express) and send me email from yoor localhost</p>
+                    <img class="item__image item__image--tic-tac-toe" src="images/movies.png" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://amelangad.github.io/tic-tac-toe/">
                     <h1 class="item__title">Tic-Tac-Toe</h1>
-                    <p>I know i could make it easier but I wanted to learn JS</p>
+                    <p>I know i could make it easier but I wanted to learn J. It isn't responsive</p>
                     <img class="item__image item__image--tic-tac-toe" src="images/tic-tac-toe.jpg" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
-                <a class="item__link" href="https://search-for-moviesss.netlify.app">
-                    <h1 class="item__title">Movies app</h1>
-                    <p>This is app with rest api. You can choose your favourite movie and create a list of your favourite movies... If u go to my github, you also run the form (its write at express) and send me email from yoor localhost</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/movies.png" alt="OBRAZEK">
+                <a class="item__link" href="https://kamar.opole.pl">
+                    <h1 class="item__title">Website of cleaning company</h1>
+                    <p></p>
+                    <img class="item__image item__image--tic-tac-toe" src="images/kamar.png" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://amelangad.github.io/paint/">
                     <h1 class="item__title">Paint</h1>
-                    <p>This is simple app to draw</p>
+                    <p>This is simple app to draw with JS and canvas. Isn't responsive.</p>
                     <img class="item__image item__image--tic-tac-toe" src="images/paint.jpg" alt="OBRAZEK">
                 </a>
             </div>
