--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
                 </a>
             </div>
             <div class="projects__item">
+                <a class="item__link" href="https://shotx.opole.pl">
+                    <h1 class="item__title">Website of Photography studio</h1>
+                    <p>Wordpress/Elementor</p>
+                    <img class="item__image item__image--tic-tac-toe" src="images/shotx.png" alt="OBRAZEK">
+                </a>
+            </div>
+            <div class="projects__item">
                 <a class="item__link" href="https://kamar.opole.pl">
                     <h1 class="item__title">Website of cleaning company</h1>
                     <p></p>
                     <img class="item__image item__image--tic-tac-toe" src="images/kamar.png" alt="OBRAZEK">
-                </a>
-            </div>
-            <div class="projects__item">
-                <a class="item__link" href="https://amelangad.github.io/paint/">
-                    <h1 class="item__title">Paint</h1>
-                    <p>This is simple app to draw with JS and canvas. Isn't responsive.</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/paint.jpg" alt="OBRAZEK">
                 </a>
             </div>
         </div>
