change the title of project

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </a>
             </div>
             <div class="projects__item">
-                <a class="item__link" href="https://shotx.opole.pl">
+                <a class="item__link" href="https://shotx.pl>
                     <h1 class="item__title">Website of Photography studio</h1>
                     <p>Wordpress/Elementor</p>
                     <img class="item__image item__image--tic-tac-toe" src="images/shotx.png" alt="OBRAZEK">
@@ -190,7 +190,7 @@
             <div class="projects__item">
                 <a class="item__link" href="https://kamar.opole.pl">
                     <h1 class="item__title">Website of cleaning company</h1>
-                    <p></p>
+                    <p>Website with HTML + SCSS </p>
                     <img class="item__image item__image--tic-tac-toe" src="images/kamar.png" alt="OBRAZEK">
                 </a>
             </div>
