changes the title again

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </a>
             </div>
             <div class="projects__item">
-                <a class="item__link" href="https://shotx.pl>
+                <a class="item__link" href="https://shotx.pl">
                     <h1 class="item__title">Website of Photography studio</h1>
                     <p>Wordpress/Elementor</p>
                     <img class="item__image item__image--tic-tac-toe" src="images/shotx.png" alt="OBRAZEK">
