Change the name of project

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://search-for-moviesss.netlify.app">
-                    <h1 class="item__title">Moviesy app</h1>
+                    <h1 class="item__title">Movies app</h1>
                     <p>Website made with React and form in node + express. You can choose your favourite movie and create a list of your favourite movies... If u go to my github, you also run the form (its write at express) and send me email from yoor localhost</p>
                     <img class="item__image item__image--tic-tac-toe" src="images/movies.png" alt="OBRAZEK">
                 </a>
