--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="footer__info">
             <h1 class="footer__header">Contact</h1>
             <p class="footer__content">Adress email: <span
-                    class="footer__content--email">magdalena.slodzinska@gmail.com</span></p>
+                    class="footer__content--email">slodzinska.magdalena@gmail.com</span></p>
             <p class="footer__content">Phone: <span class="footer__content--phone">535 828 465</span></p>
         </div>
     </footer>
