remove unnecessery styles

--- a/index.html
+++ b/index.html
@@ -163,35 +163,35 @@
                 <a class="item__link" href="https://bigbag.opole.pl">
                     <h1 class="item__title">Recycling Company Website</h1>
                     <p>Website made with React, Tailwind and PHP Mailer</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/bigbag.png" alt="OBRAZEK">
+                    <img class="item__image" src="images/bigbag.png" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://search-for-moviesss.netlify.app">
                     <h1 class="item__title">Movies app</h1>
                     <p>Website made with React and form in node + express. You can choose your favourite movie and create a list of your favourite movies... If u go to my github, you also run the form (its write at express) and send me email from yoor localhost</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/movies.png" alt="OBRAZEK">
+                    <img class="item__image" src="images/movies.png" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://amelangad.github.io/tic-tac-toe/">
                     <h1 class="item__title">Tic-Tac-Toe</h1>
-                    <p>I know i could make it easier but I wanted to learn J. It isn't responsive</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/tic-tac-toe.jpg" alt="OBRAZEK">
+                    <p>I know i could make it easier but I wanted to learn JS. It isn't responsive</p>
+                    <img class="item__image " src="images/tic-tac-toe.jpg" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://shotx.pl">
                     <h1 class="item__title">Website of Photography studio</h1>
                     <p>Wordpress/Elementor</p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/shotx.png" alt="OBRAZEK">
+                    <img class="item__image" src="images/shotx.png" alt="OBRAZEK">
                 </a>
             </div>
             <div class="projects__item">
                 <a class="item__link" href="https://kamar.opole.pl">
                     <h1 class="item__title">Website of cleaning company</h1>
                     <p>Website with HTML + SCSS </p>
-                    <img class="item__image item__image--tic-tac-toe" src="images/kamar.png" alt="OBRAZEK">
+                    <img class="item__image" src="images/kamar.png" alt="OBRAZEK">
                 </a>
             </div>
         </div>
