changing the content

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         <div class="wrapper__desc">
             <div class="desc">
                 <h1 class="desc__header">Hi, I am <span class="name">Magda&nbsp;&nbsp;</span></h1>
-                <p class="desc__content"> In past I made few website with Wordress CMS. I want to be a frontend developer, so i just make this website to show my projects and get my first job as a junior frontend developer. Now I study advanced React and Typescript. In my future I plan learn to Svelte. I can work in a team or only with myself. I am very internally motivate, learning-fast and I have the ability to quickly find information.
+                <p class="desc__content"> I have been interested in programming for 2 years. Previously, I created websites using cms wordpress.
+Programming is my passion and I would like to make it a way of life. I would like to give myself a chance to develop at a faster pace than when learning on my own, so I created this website along with my other projects. Now I am learning advanced React and TypeScript. I am highly motivated, I search for information quickly and I can work both in a team and independently.
                 </p>
             </div>
         </div>
